fix : changed webhook info UI and fixed overflow in processed events table

--- a/admin/src/apps/developer/views/tableStyle.css
+++ b/admin/src/apps/developer/views/tableStyle.css
@@ -27,3 +27,13 @@
     margin-bottom: 20px;
     transform: translatez(0);
 }
+
+.developer-webhooks-processedEvents .tabulator-header .tabulator-col {
+    display: inline-block;
+    position: relative;
+    box-sizing: border-box;
+    background-color: #fff;
+    text-align: left;
+    vertical-align: top;
+    overflow: hidden;
+}
